@@ -2,7 +2,7 @@ Package: cholera
 Type: Package
 Title: Amend, Augment and Aid Analysis of John Snow's Cholera Map
 Version: 0.7.9.9014
-Date: 2021-12-23
+Date: 2021-12-24
 Authors@R: person("lindbrook", email = "lindbrook@gmail.com",
   role = c("aut", "cre"))
 Description: Amends errors, augments data and aids analysis of John Snow's map
